# calc-rs

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs
src/app/: data.rs  mode.rs  numedit.rs  theme_updater.rs
src/app/mode/: advanced.rs  graphing.rs  simple.rs
