[package]
name = "rcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
eframe = { version = "0.20.0", features = ["persistence"] }
rustyard = "0.6.0"
ron = "0.8.0"
bincode = "*"
home = "*"
asciimath = "0.8.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
lto = "thin"
